# nanobot-rs

./: .gitignore  CLAUDE.md  Dockerfile  README.md  README.zh.md  ROLE.md  client_example.html  config.example.yaml  plan.md  review.md  task.md  task2.md
gasket/: .env.example  Cargo.toml  rustfmt.toml
gasket/benches/: scanner_benchmark.rs
gasket/broker/: Cargo.toml
gasket/broker/src/: broker.rs  error.rs  global.rs  lib.rs  memory.rs  session.rs  types.rs
gasket/broker/tests/: integration_test.rs
gasket/bus/: Cargo.toml
gasket/bus/src/: actors.rs  lib.rs
gasket/channels/: Cargo.toml
gasket/channels/src/: adapter.rs  approval_router.rs  config.rs  discord.rs  error.rs  lib.rs  middleware.rs  outbound.rs  provider.rs  slack.rs  telegram.rs  tui.rs  websocket.rs  wechat.rs
gasket/channels/src/dingtalk/: channel.rs  mod.rs  webhook.rs
gasket/channels/src/feishu/: channel.rs  mod.rs  webhook.rs
gasket/channels/src/webhook/: mod.rs  server.rs  types.rs
gasket/channels/src/wecom/: channel.rs  mod.rs  webhook.rs
gasket/cli/: Cargo.toml
gasket/cli/src/: cli.rs  main.rs  provider.rs  workspace_downloader.rs
gasket/cli/src/commands/: agent.rs  auth.rs  broker_outbound.rs  channel_factory.rs  channels.rs  command_host.rs  config_api.rs  cron.rs  dispatching_handler.rs  embedding.rs  gateway.rs  memory.rs  mod.rs  onboard.rs  plugin_commands.rs  registry.rs  status.rs  tool.rs  tui.rs  vault.rs  wiki.rs
gasket/cli/src/interaction/: cli.rs  mod.rs
gasket/command/: Cargo.toml
gasket/command/src/: completer.rs  dispatcher.rs  error.rs  host.rs  lib.rs  parser.rs  template.rs  types.rs  yaml_loader.rs
gasket/command/src/builtins/: clear.rs  exit.rs  help.rs  mod.rs  model.rs  new.rs  sessions.rs
gasket/command/tests/: end_to_end.rs
gasket/core/: Cargo.toml
gasket/core/benches/: scanner_benchmark.rs
gasket/core/src/: error.rs  lib.rs  token_tracker.rs
gasket/core/src/agent/: compression.rs  context.rs  context_v2.rs  executor.rs  executor_core.rs  history_processor.rs  history_query.rs  loop_.rs  memory.rs  mod.rs  pipeline.rs  prompt.rs  stream.rs  stream_buffer.rs  subagent.rs  subagent_tracker.rs  summarization.rs
gasket/core/src/bus/: actors.rs  events.rs  mod.rs  queue.rs
gasket/core/src/channels/: discord.rs  email.rs  feishu.rs  middleware.rs  mod.rs  outbound.rs  slack.rs  telegram.rs  wecom.rs
gasket/core/src/config/: agent.rs  channel.rs  embedding.rs  loader.rs  mod.rs  provider.rs  resolver.rs  schema.rs  tools.rs
gasket/core/src/cron/: mod.rs  service.rs
gasket/core/src/crypto/: mod.rs
gasket/core/src/heartbeat/: mod.rs
gasket/core/src/hooks/: external.rs  history.rs  mod.rs  registry.rs  types.rs  vault.rs
gasket/core/src/memory/: mod.rs  store.rs
gasket/core/src/providers/: common.rs  copilot.rs  copilot_oauth.rs  gemini.rs  mod.rs  model_spec.rs  (+1 more)
gasket/core/tests/: channel_e2e_tests.rs  e2e_tests.rs  subagent_integration_test.rs
gasket/docs/: architecture.md  cron-usage.md
gasket/embedding/: Cargo.toml
gasket/embedding/src/: index.rs  indexer.rs  lance_store.rs  lib.rs  provider.rs  rig_adapter.rs  searcher.rs  store.rs  vector_store.rs
gasket/embedding/tests/: integration.rs
gasket/engine/: Cargo.toml
gasket/engine/resources/: stop_words.txt
gasket/engine/src/: bootstrap.rs  broker_outbound.rs  bus_adapter.rs  error.rs  lib.rs  token_tracker.rs
gasket/engine/tests/: handle_inbound.rs  plugin_integration.rs  script_integration.rs  wiki_integration.rs
gasket/providers/: Cargo.toml
gasket/providers/src/: anthropic.rs  base.rs  common.rs  copilot.rs  copilot_oauth.rs  gemini.rs  lib.rs  logging_http.rs  minimax.rs  moonshot.rs  rig_bridge.rs  rig_provider.rs  streaming.rs  vendor_workarounds.rs
gasket/providers/tests/: moonshot_api_test.rs  moonshot_api_test_tool_roundtrip.rs
gasket/sandbox/: Cargo.toml  README.md
gasket/sandbox/src/: lib.rs
gasket/scripts/: migrate_cron_yaml.sh
gasket/semantic/: Cargo.toml
gasket/semantic/src/: embedder.rs  lib.rs  vector_math.rs
gasket/storage/: Cargo.toml
gasket/storage/migrations/: 0001_add_file_mtime.sql  0002_session_key_struct.sql  0003_add_file_size.sql
gasket/storage/src/: cron_store.rs  embedder.rs  event_store.rs  fs.rs  global.rs  kv_store.rs  lib.rs  maintenance_store.rs  migrations.rs  processor.rs  query.rs  session.rs  session_store.rs  vector_math.rs
gasket/tantivy/: Cargo.toml
gasket/tantivy/src/: lib.rs  main.rs
gasket/types/: Cargo.toml
gasket/types/src/: agent.rs  channel_config.rs  command.rs  events.rs  lib.rs  pending_ask.rs  session_event.rs  spawn_budget.rs  token_tracker.rs  tool.rs  wiki.rs
gasket/wiki/: Cargo.toml
gasket/wiki/src/: index.rs  indexing_service.rs  lib.rs  log.rs  page.rs  store.rs
nanobot-rs/: Cargo.toml
nanobot-rs/nanobot-cli/: Cargo.toml
nanobot-rs/nanobot-cli/src/: cli.rs  main.rs  provider.rs
nanobot-rs/nanobot-core/: .env.example  Cargo.toml
nanobot-rs/nanobot-core/benches/: scanner_benchmark.rs
nanobot-rs/nanobot-core/skills/: github.md  skill-creator.md  tmux.md  weather.md
nanobot-rs/nanobot-core/src/: error.rs  lib.rs  token_tracker.rs
nanobot-rs/nanobot-core/tests/: channel_e2e_tests.rs  e2e_tests.rs  subagent_integration_test.rs
nanobot-rs/nanobot-core/workspace/: AGENTS.md  TOOLS.md
nanobot-rs/nanobot-sandbox/: Cargo.toml
nanobot-rs/nanobot-sandbox/src/: error.rs  lib.rs
nanobot-rs/nanobot-statemachine/src/: config_loader.rs  engine.rs  lib.rs  store.rs  types.rs
tantivy-cli/: Cargo.toml  README.md
tantivy-cli/src/: error.rs  main.rs
tantivy-cli/src/index/: lock.rs  manager.rs  schema.rs  search.rs
tantivy-cli/src/maintenance/: backup.rs  compact.rs  expire.rs  rebuild.rs  stats.rs
tantivy-cli/tests/: integration_test.rs
tantivy-mcp/: Cargo.toml
tantivy-mcp/src/: error.rs  lib.rs  main.rs  tools.rs
tantivy-mcp/src/index/: document.rs  manager.rs
tantivy-mcp/src/maintenance/: backup.rs  compact.rs  expire.rs  rebuild.rs  scheduler.rs
tantivy-mcp/src/mcp/: handler.rs  tools.rs  transport.rs
tantivy-mcp/tests/: integration_test.rs
(+783 files in other folders)
