
[workspace.package]
version = "2.0.0"
edition = "2021"
license = "MIT"
authors = ["nanobot contributors"]
repository = "https://github.com/YeHeng/nanobot-rs"
keywords = ["ai", "agent", "chatbot", "llm"]
description = "A lightweight personal AI assistant framework"

[workspace]
resolver = "2"
members = [
    "nanobot-core",
    "nanobot-cli",
    "nanobot-sandbox",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3.32"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
url = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = "0.30"

# Error handling
thiserror = "2"
anyhow = "1"

# Configuration
dirs = "6"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Telegram
teloxide = { version = "0.17", features = ["rustls"] }

# Discord
serenity = { version = "0.12", default-features = false, features = ["rustls_backend", "gateway", "model", "client"] }

# WebSocket (for Slack)
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }

# Cron
cron = "0.15"

# UUID
uuid = { version = "1", features = ["v4"] }

# Email (SMTP)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }

# Email (IMAP)
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-rustls = "0.26"
rustls-native-certs = "0.8"

# Internal crates
nanobot-core = { path = "nanobot-core" }
nanobot-sandbox = { path = "nanobot-sandbox" }

# Markdown rendering
termimad = "0.34.1"

# HTTP server (for webhooks)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Terminal
colored = "3"

# REPL
reedline = "0.45"
nu-ansi-term = "0.50"

# Interactive CLI
dialoguer = "0.11"

# Concurrent data structures
dashmap = "6"
