[package]
name = "tantivy-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["nanobot contributors"]
description = "Tantivy full-text search CLI tool"
repository = "https://github.com/yeheng/nanobot"
keywords = ["search", "tantivy", "index", "full-text", "cli"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "tantivy-cli"
path = "src/main.rs"

[dependencies]
# File locking (for process-level index mutex)
fs2 = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Search engine
tantivy = "0.25"

# CLI
clap = { version = "4", features = ["derive"] }

# Directory management
directories = "6"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
