[package]
name = "tantivy-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["nanobot contributors"]
description = "Standalone MCP index server with Tantivy full-text search"
repository = "https://github.com/yeheng/nanobot"
keywords = ["mcp", "search", "tantivy", "index", "full-text"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "tantivy-mcp"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal", "sync", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Search engine
tantivy = "0.25"

# CLI
clap = { version = "4", features = ["derive"] }

# UUID for document IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Synchronization
parking_lot = "0.12"
dashmap = "6.0"

# Directory management
directories = "6"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
