[package]
name = "gasket-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-channel = "2"
async-trait = "0.1"
dashmap = "6"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
gasket-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
