[package]
name = "gasket-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Messaging channel abstractions and implementations for gasket"

[features]
default = ["websocket"]
telegram = ["teloxide"]
discord = ["serenity"]
slack = ["tokio-tungstenite"]

dingtalk = ["sha2", "axum", "tower", "tower-http", "dashmap"]
feishu = ["axum", "tower", "tower-http", "dashmap"]
wecom = ["sha1", "aes", "cbc", "quick-xml", "axum", "tower", "tower-http", "dashmap"]
websocket = ["axum", "tower", "tower-http", "dashmap"]
all-channels = ["telegram", "discord", "slack", "dingtalk", "feishu", "wecom", "websocket"]

[dependencies]
# Internal crates
gasket-types = { path = "../types" }
gasket-broker = { workspace = true }

# Async
tokio.workspace = true
async-trait.workspace = true
futures = "0.3"
futures-util = { workspace = true }

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# HTTP (for stateless senders)
reqwest.workspace = true

# Time
chrono.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# UUID
uuid.workspace = true

# URL encoding (DingTalk signing)
urlencoding = "2.1"

# Base64 (DingTalk signing)
base64 = "0.22"

# Crypto for WeCom (optional)
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
quick-xml = { version = "0.37", optional = true }

# Telegram (optional)
teloxide = { workspace = true, optional = true }

# Discord (optional)
serenity = { workspace = true, optional = true }

# Slack WebSocket (optional)
tokio-tungstenite = { workspace = true, optional = true }

# Webhook HTTP server (optional - used by dingtalk, feishu, wecom, and standalone webhook)
axum = { workspace = true, optional = true, features = ["ws"] }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
bytes = "1"
dashmap = { version = "6.1", optional = true }

# TUI
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
