[package]
name = "gasket-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Messaging channel abstractions and implementations for gasket"

[features]
default = ["websocket"]
telegram = ["teloxide"]
discord = ["serenity"]
slack = ["tokio-tungstenite"]

feishu = ["axum", "tower", "tower-http", "dashmap"]
wechat = ["dep:wechatbot"]
websocket = ["axum", "tower", "tower-http", "dashmap"]
all-channels = ["telegram", "discord", "slack", "feishu", "wechat", "websocket"]

[dependencies]
# Internal crates
gasket-types = { path = "../types" }
gasket-broker = { workspace = true }

# Async
tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# HTTP (for stateless senders)
reqwest.workspace = true

# Time
chrono.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# UUID
uuid.workspace = true

# URL encoding
urlencoding = "2.1"

# Base64
base64 = "0.22"



# Telegram (optional)
teloxide = { workspace = true, optional = true }

# Discord (optional)
serenity = { workspace = true, optional = true }

# Slack WebSocket (optional)
tokio-tungstenite = { workspace = true, optional = true }

# WeChat iLink Bot SDK (optional)
wechatbot = { version = "0.3", optional = true }

# Webhook HTTP server (optional - used by feishu and standalone webhook)
axum = { workspace = true, optional = true, features = ["ws"] }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
bytes = "1"
dashmap = { version = "6.1", optional = true }


