[package]
name = "gasket-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for gasket AI assistant"

[[bin]]
name = "gasket"
path = "src/main.rs"

[features]
default = ["markdown", "all-channels"]
markdown = ["termimad"]
telegram = ["gasket-core/telegram"]
discord = ["gasket-core/discord"]
slack = ["gasket-core/slack"]
email = ["gasket-core/email"]
feishu = ["gasket-core/feishu"]
dingtalk = ["gasket-core/dingtalk"]
wecom = ["gasket-core/wecom"]
all-channels = ["gasket-core/all-channels"]

[dependencies]
gasket-core = { path = "../core" }

# Async
tokio.workspace = true
futures = "0.3"

# CLI
clap.workspace = true

# Logging & Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true

# Error handling
anyhow.workspace = true

# Serialization
serde_json.workspace = true

# Time
chrono.workspace = true

# Configuration
dirs.workspace = true

# Terminal
colored.workspace = true

# Interactive CLI
dialoguer.workspace = true

# REPL
reedline.workspace = true
nu-ansi-term.workspace = true

# Cron (for validating cron expressions)
cron.workspace = true

# UUID
uuid.workspace = true

# Markdown rendering (optional)
termimad = { workspace = true, optional = true }

# Telegram (optional)
teloxide = { workspace = true, optional = true }

# TLS
rustls = { version = "0.23", features = ["ring"] }

# HTTP server
axum = { workspace = true, features = ["ws"] }

# Archive extraction (for workspace template downloads)
tempfile = "3"

# SQLite (for search commands)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }