[package]
name = "gasket-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for gasket AI assistant"

[[bin]]
name = "gasket"
path = "src/main.rs"

[features]
default = ["markdown", "all-providers", "workspace-download"]

# Rendering
markdown = ["termimad"]

# Telemetry (optional, for production/debugging)
telemetry = ["tracing-opentelemetry", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]

# Channels (for gateway mode)
telegram = ["gasket-core/telegram"]
discord = ["gasket-core/discord"]
slack = ["gasket-core/slack"]
email = ["gasket-core/email"]
feishu = ["gasket-core/feishu"]
dingtalk = ["gasket-core/dingtalk"]
wecom = ["gasket-core/wecom"]
all-channels = ["gasket-core/all-channels", "axum", "teloxide"]

# Providers
provider-gemini = ["gasket-core/provider-gemini"]
provider-copilot = ["gasket-core/provider-copilot"]
all-providers = ["provider-gemini", "provider-copilot"]

# Workspace template download
workspace-download = ["gasket-core/workspace-download"]

# Full build (equivalent to old default)
full = ["default", "all-channels", "telemetry"]

[dependencies]
gasket-core = { path = "../core" }

# Async
tokio.workspace = true
futures = "0.3"

# CLI
clap.workspace = true

# Logging & Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

# Error handling
anyhow.workspace = true

# Serialization
serde_json.workspace = true

# Time
chrono.workspace = true

# Configuration
dirs.workspace = true

# Terminal
colored.workspace = true

# Interactive CLI
dialoguer.workspace = true

# REPL
reedline.workspace = true
nu-ansi-term.workspace = true

# Cron (for validating cron expressions)
cron.workspace = true

# UUID
uuid.workspace = true

# Markdown rendering (optional)
termimad = { workspace = true, optional = true }

# Telegram (optional)
teloxide = { workspace = true, optional = true }

# TLS
rustls = { version = "0.23", features = ["ring"] }

# HTTP server
axum = { workspace = true, features = ["ws"], optional = true }

# Archive extraction (for workspace template downloads)
tempfile = "3"

# SQLite (for search commands)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }