[package]
name = "gasket-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for gasket AI assistant"

[[bin]]
name = "gasket"
path = "src/main.rs"

[features]
default = ["markdown", "websocket"]

# Rendering
markdown = ["termimad"]

# Telemetry (optional, for production/debugging)
telemetry = ["tracing-opentelemetry", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]

# Channels (for gateway mode)
telegram = ["gasket-engine/telegram"]
discord = ["gasket-engine/discord"]
slack = ["gasket-engine/slack"]

feishu = ["gasket-engine/feishu"]
dingtalk = ["gasket-engine/dingtalk"]
wecom = ["gasket-engine/wecom"]
websocket = ["gasket-engine/websocket", "axum", "dep:tower-http"]
all-channels = ["gasket-engine/all-channels", "axum", "teloxide", "dep:tower-http"]

# Embedding
local-embedding = ["gasket-engine/local-embedding"]

# Providers
provider-gemini = ["gasket-engine/provider-gemini"]
provider-copilot = ["gasket-engine/provider-copilot"]
all-providers = ["provider-gemini", "provider-copilot"]

# Workspace template download (now in CLI, not core)
workspace-download = ["dep:tar", "dep:flate2"]

# Full build (all optional features enabled)
full = ["default", "all-providers", "workspace-download", "all-channels", "telemetry"]

[dependencies]
gasket-engine = { path = "../engine" }
gasket-sandbox = { path = "../sandbox" }
gasket-types = { path = "../types" }

# Async
tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true

# CLI
clap.workspace = true

# Logging & Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

# Error handling
anyhow.workspace = true

# Serialization
serde_json.workspace = true

# Time
chrono.workspace = true

# Configuration
dirs.workspace = true

# Terminal
colored.workspace = true

# Interactive CLI
dialoguer.workspace = true

# REPL
reedline.workspace = true
nu-ansi-term.workspace = true

# Cron (for validating cron expressions)
cron.workspace = true

# UUID
uuid.workspace = true

# Markdown rendering (optional)
termimad = { workspace = true, optional = true }

# Telegram (optional)
teloxide = { workspace = true, optional = true }

# TLS
rustls.workspace = true

# HTTP server
axum = { workspace = true, features = ["ws"], optional = true }
tower-http = { workspace = true, optional = true }

# HTTP client (for workspace downloads)
reqwest.workspace = true

# Archive extraction (for workspace template downloads)
tempfile = "3"
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }

# SQLite (for search commands)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }


