[package]
name = "gasket-command"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Slash-command dispatcher for the gasket CLI and Web frontends"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
gasket-types = { path = "../types" }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync", "macros"] }
tracing = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
