[package]
name = "gasket-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for gasket AI assistant"

[features]
default = []
telegram = ["gasket-channels/telegram"]
discord = ["gasket-channels/discord"]
slack = ["gasket-channels/slack"]
email = ["gasket-channels/email"]
dingtalk = ["gasket-channels/dingtalk"]
feishu = ["gasket-channels/feishu"]
wecom = ["gasket-channels/wecom"]
webhook = ["axum", "tower", "tower-http", "gasket-channels/webhook"]
# Smart model selection based on task content analysis
smart-model-selection = []
all-channels = ["gasket-channels/all-channels"]

# Provider variants
provider-gemini = ["gasket-providers/provider-gemini"]
provider-copilot = ["gasket-providers/provider-copilot"]
all-providers = ["gasket-providers/all-providers"]

# Workspace template download
workspace-download = ["tar", "flate2"]

[dependencies]
# Async
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures-util = { workspace = true }
futures = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.33"
json5 = "0.4"

# HTTP
reqwest.workspace = true
url.workspace = true
urlencoding = "2.1"

# Logging & Tracing
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Configuration
dirs.workspace = true

# Time
chrono.workspace = true

# Cron
cron.workspace = true

# UUID
uuid.workspace = true

# Which (for checking binary existence)
which = "8.0"

# Concurrent data structures
dashmap = "6.1"

# Base64 (used by vault/crypto)
base64 = "0.22"

# HTML parsing
html2text = { version = "0.16" }

# Webhook HTTP server (optional)
axum = { workspace = true, optional = true, features = ["ws"] }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
bytes = "1"

# SQLite (async)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Concurrency
parking_lot = "0.12"

# Token counting
tiktoken-rs = "0.9"

# Regex for vault placeholder scanning
regex = "1"

# Encryption dependencies
chacha20poly1305 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Sandbox module
gasket-sandbox = { path = "../sandbox" }

# Provider abstractions
gasket-providers = { path = "../providers" }

# Channel abstractions
gasket-channels = { path = "../channels" }

# Archive extraction (for workspace template downloads)
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
tokio-stream = "0.1.18"

[dev-dependencies]
tokio-test = "0.4"
dotenvy = "0.15"
rustls = { version = "0.23", features = ["ring"] }
tempfile = "3"
criterion = "0.5"
