[package]
name = "gasket-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for gasket AI assistant"

[features]
default = []
telegram = ["gasket-channels/telegram"]
discord = ["gasket-channels/discord"]
slack = ["gasket-channels/slack"]
email = ["gasket-channels/email"]
dingtalk = ["gasket-channels/dingtalk"]
feishu = ["gasket-channels/feishu"]
wecom = ["gasket-channels/wecom"]
webhook = ["gasket-channels/webhook"]
# Smart model selection based on task content analysis
smart-model-selection = []
all-channels = ["gasket-channels/all-channels"]

# Provider variants
provider-gemini = ["gasket-providers/provider-gemini"]
provider-copilot = ["gasket-providers/provider-copilot"]
all-providers = ["gasket-providers/all-providers"]

[dependencies]
# Internal crates - Facade pattern: re-export all crates
gasket-types = { path = "../types" }
gasket-bus = { path = "../bus" }
gasket-history = { path = "../history" }
gasket-providers = { path = "../providers" }
gasket-channels = { path = "../channels" }

# Supporting crates
gasket-vault = { path = "../vault" }
gasket-storage = { path = "../storage" }
gasket-semantic = { path = "../semantic", features = ["local-embedding"] }

# Async
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures-util = { workspace = true }
futures = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.33"
json5 = "1.3"

# HTTP
reqwest.workspace = true
url.workspace = true
urlencoding = "2.1"

# Logging & Tracing
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Configuration
dirs.workspace = true

# Time
chrono.workspace = true

# Cron
cron.workspace = true

# UUID
uuid.workspace = true

# Which (for checking binary existence)
which = "8.0"

# Concurrent data structures
dashmap = "6.1"

# Base64 (used by vault/crypto)
base64 = "0.22"

# HTML parsing
html2text = { version = "0.16" }

# Bytes for HTTP body handling
bytes = "1"

# Concurrency
parking_lot = "0.12"

# Token counting
tiktoken-rs = "0.9"

# Regex for vault placeholder scanning
regex = "1"

# Sandbox module
gasket-sandbox = { path = "../sandbox" }

tokio-stream = "0.1.18"

[dev-dependencies]
tokio-test = "0.4"
dotenvy = "0.15"
rustls = { version = "0.23", features = ["ring"] }
tempfile = "3"
criterion = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
