[package]
name = "gasket-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for gasket AI assistant (facade layer)"

[features]
default = []
telegram = ["gasket-channels/telegram"]
discord = ["gasket-channels/discord"]
slack = ["gasket-channels/slack"]
email = ["gasket-channels/email"]
dingtalk = ["gasket-channels/dingtalk"]
feishu = ["gasket-channels/feishu"]
wecom = ["gasket-channels/wecom"]
webhook = ["gasket-channels/webhook"]
# Smart model selection based on task content analysis
smart-model-selection = []
all-channels = ["gasket-channels/all-channels"]

# Provider variants
provider-gemini = ["gasket-providers/provider-gemini"]
provider-copilot = ["gasket-providers/provider-copilot"]
all-providers = ["gasket-providers/all-providers"]

[dependencies]
# Internal crates - Facade pattern: re-export all crates
gasket-types = { path = "../types" }
gasket-engine = { path = "../engine" }
gasket-bus = { path = "../bus" }
gasket-history = { path = "../history" }
gasket-providers = { path = "../providers" }
gasket-channels = { path = "../channels" }

# Supporting crates
gasket-vault = { path = "../vault" }
gasket-storage = { path = "../storage" }
gasket-semantic = { path = "../semantic", features = ["local-embedding"] }

# Async - needed by heartbeat
tokio.workspace = true

# Logging & Tracing - needed by heartbeat
tracing.workspace = true

# Serialization - needed for config types
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.33"

# Error handling
anyhow.workspace = true

[dev-dependencies]
tokio-test = "0.4"
chrono.workspace = true
cron.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tempfile = "3"
uuid.workspace = true
dotenvy = "0.15"
rustls = { version = "0.23", features = ["ring"] }
