[package]
name = "gasket-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core execution engine for gasket"

[dependencies]
gasket-types = { path = "../types" }
gasket-broker = { path = "../broker" }

gasket-storage = { path = "../storage" }
gasket-providers = { path = "../providers" }
gasket-sandbox = { path = "../sandbox" }
# Vault crypto dependencies (migrated from gasket-vault crate)
chacha20poly1305 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
gasket-channels = { path = "../channels" }
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
dashmap = "6"
tiktoken-rs.workspace = true
parking_lot = "0.12"
regex = "1"
which = "8.0"
html2text = "0.16"
bytes = "1"
cron.workspace = true
notify.workspace = true
chrono.workspace = true
uuid.workspace = true
url.workspace = true
urlencoding = "2.1"
serde_yaml.workspace = true
json5 = "1.3"
base64 = "0.22"
futures-util.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio-stream = "0.1.18"
bytemuck = "1"
reqwest.workspace = true
dirs.workspace = true
tantivy = "0.25"

[features]
default = ["websocket"]
smart-model-selection = []
provider-anthropic = ["gasket-providers/provider-anthropic"]
provider-gemini = ["gasket-providers/provider-gemini"]
provider-copilot = ["gasket-providers/provider-copilot"]
provider-minimax = ["gasket-providers/provider-minimax"]
provider-moonshot = ["gasket-providers/provider-moonshot"]
all-providers = ["gasket-providers/all-providers"]
telegram = ["gasket-channels/telegram"]
discord = ["gasket-channels/discord"]
slack = ["gasket-channels/slack"]

dingtalk = ["gasket-channels/dingtalk"]
feishu = ["gasket-channels/feishu"]
wecom = ["gasket-channels/wecom"]
websocket = ["gasket-channels/websocket"]
all-channels = ["telegram", "discord", "slack", "dingtalk", "feishu", "wecom", "websocket"]
local-embedding = ["gasket-storage/local-embedding"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
