[package]
name = "gasket-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Semantic text embedding and vector math for gasket AI assistant"

[features]
default = []
# Enable local ONNX-based embedding (requires ~20MB model download)
local-embedding = ["fastembed", "bytemuck", "parking_lot"]

[dependencies]
# Async
async-trait.workspace = true
directories.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging & Tracing
tracing.workspace = true

# Error handling
anyhow.workspace = true

# Optional: Local ONNX embedding
fastembed = { version = "5.13.0", optional = true }
bytemuck = { version = "1", optional = true }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
tokio-test = "0.4"
