[package]
name = "gasket-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SQLite-backed storage, history processing, and semantic embedding for gasket"

[features]
default = []
# Enable local ONNX-based embedding (requires ~20MB model download)
local-embedding = ["fastembed", "bytemuck/derive", "parking_lot"]
# Enable file watcher for memory directory changes
memory-watcher = ["notify"]

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Logging & Tracing
tracing.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Time
chrono.workspace = true

# UUID
uuid.workspace = true

# SQLite (async)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json"] }

# Configuration directory
dirs.workspace = true
directories.workspace = true

# Zero-copy byte casting for embeddings
bytemuck = "1"

# Token counting (from gasket-history)
tiktoken-rs.workspace = true

# Optional: Local ONNX embedding (from gasket-semantic)
fastembed = { version = "5.13.0", optional = true }
parking_lot = { version = "0.12", optional = true }

# Optional: File watcher for memory directory changes
notify = { workspace = true, optional = true }

# Internal crates
gasket-types = { path = "../types" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
