[package]
name = "gasket-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SQLite-backed storage, history processing, and semantic embedding for gasket"

[features]
default = []
# Enable file watcher for memory directory changes
memory-watcher = ["notify"]

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Logging & Tracing
tracing.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Time
chrono.workspace = true

# UUID
uuid.workspace = true

# SQLite (async)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json"] }

# Full-text search
tantivy = "0.25"

# Configuration directory
dirs.workspace = true
directories.workspace = true

# Token counting (from gasket-history)
tiktoken-rs.workspace = true

# Optional: File watcher for memory directory changes
notify = { workspace = true, optional = true }

# Internal crates
gasket-types = { path = "../types" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
