[package]
name = "gasket-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared types and events for gasket"

[dependencies]
# Serialization
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true

# Async
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }

# Time
chrono.workspace = true

# UUID (v7 for time-ordered IDs)
uuid.workspace = true

# Error handling
thiserror.workspace = true

# Locking primitives
parking_lot = "0.12"
